# insuretrack

./: .dockerignore  .env.example  .gitattributes  .gitignore  .npmrc  CLAUDE.md  MIGRATION.md  README.md  dev.bat  docker-compose.ghcr.yml  docker-compose.yml  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  vitest.config.ts  vitest.setup.ts
.github/workflows/: build.yml  ci.yml  deploy-demo.yml
apps/admin/: .env.example  .gitignore  Dockerfile  middleware.ts  next.config.ts  package.json
apps/admin/app/: error.tsx  global-error.tsx  page.tsx
apps/admin/app/admin/: layout.tsx  page.tsx
apps/admin/app/admin/audit-logs/: page.tsx
apps/admin/app/admin/claims/: page.tsx
apps/admin/app/admin/clients/: page.tsx
apps/admin/app/admin/customers/: page.tsx
apps/admin/app/admin/dashboard/: page.tsx
apps/admin/app/admin/email-logs/: page.tsx
apps/admin/app/admin/inquiries/: page.tsx
apps/admin/components/: AdminDownloadButton.tsx  AdminListPage.tsx  AdminShell.tsx  AdminUserMenu.tsx  ColumnVisibilityMenu.tsx  Navbar.tsx  Reveal.tsx
apps/admin/lib/: adminTableTypes.ts  format.ts  useAdmin.ts  useAdminTable.ts
apps/backend/: .env.example  Cargo.toml  Dockerfile
apps/backend/migrations/: 0001_initial.sql  0003_constraints.sql  0005_clients_testimonials.sql  0006_normalize_seed_paths.sql  0008_relax_customer_for_split.sql  0009_invoice_pdf_path.sql  0010_claim_payment_proof.sql  0011_inquiry_messages.sql  0012_registration_beneficiary.sql  0013_group_registration.sql  0014_admin_filter_indexes.sql  0015_admin_user_management.sql  0016_payment_receipt.sql  0017_registration_members.sql  0018_registrations_plan_code.sql  0019_admin_customer_management.sql  0020_underwriting.sql  0021_app_settings.sql
apps/backend/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
apps/backend/src/auth/: cookies.rs  csrf.rs  jwt.rs  middleware.rs  mod.rs  password.rs
apps/backend/src/domain/: claim.rs  identifier.rs  inquiry.rs  invoice.rs  mod.rs  policy.rs  registration.rs  underwriting.rs
apps/backend/src/dto/: mod.rs  registration.rs
apps/backend/src/repo/: filters.rs  mod.rs
apps/backend/src/routes/: admin.rs  admin_customers.rs  admin_marketing.rs  admin_settings.rs  admin_underwriting.rs  admin_users.rs  customer.rs  mod.rs  public.rs  underwriting.rs  util.rs
apps/backend/src/seed/: README.md  audit_logs.rs  claims.rs  config.rs  customers.rs  data.rs  email_logs.rs  id_card.rs  inquiries.rs  invoices.rs  mod.rs  pdf_writer.rs  policies.rs  printer.rs  registrations.rs  reset.rs
apps/backend/src/services/: audit.rs  dashboard.rs  email.rs  email_template.rs  inquiry.rs  marketing.rs  mod.rs  pdf.rs  resend.rs  settings.rs  storage.rs  underwriting.rs
apps/backend/src/services/pdf/: fonts.rs  helpers.rs  inputs.rs  invoice.rs  layout.rs  mod.rs  policy.rs  receipt.rs  tests_fixtures.rs  theme.rs
apps/backend/src/services/pdf/sections/: beneficiary_box.rs  benefit_list.rs  company_box.rs  coverage_table.rs  footer_bar.rs  footer_notice.rs  header_bar.rs  info_boxes.rs  mod.rs  participants_table.rs  terms_list.rs  title_status.rs  total_box.rs  two_column_card.rs
apps/backend/tests/: admin_customers.rs  claims.rs  csrf.rs  dashboard_charts.rs  inquiry_thread.rs  path_traversal.rs  payment_webhook.rs
apps/backend/tests/common/: mod.rs
apps/portal/: .env.example  Dockerfile  middleware.ts  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/portal/app/: error.tsx  layout.tsx  not-found.tsx  page.tsx
apps/portal/app/(marketing)/: layout.tsx  page.tsx
apps/portal/app/portal/: layout.tsx
apps/portal/components/: Carousel.tsx  CustomerUserMenu.tsx  Footer.tsx  Navbar.tsx  PlanPicker.tsx  PolicyCard.tsx  PolicyPicker.tsx  PortalShell.tsx  Reveal.tsx  motion-provider.tsx
apps/portal/components/registration/: ApplicantTypePicker.tsx  ParticipantImport.tsx  ParticipantTable.tsx  ResultDialog.tsx
apps/portal/hooks/: use-should-animate.ts
apps/portal/lib/: product-details.ts  submit-error.ts
backend/: .dockerignore  .env.example  Cargo.toml
backend/migrations/: 0002_id_sequences.sql  0004_seed.sql  0007_admin_profile.sql
backend/src/: config.rs  main.rs  state.rs
backend/src/auth/: middleware.rs
backend/src/domain/: claim.rs  invoice.rs  mod.rs  policy.rs  registration.rs
backend/src/dto/: mod.rs
backend/src/repo/: mod.rs
backend/src/routes/: admin.rs  admin_marketing.rs  customer.rs  mod.rs  public.rs
backend/src/services/: audit.rs  dashboard.rs  marketing.rs  mod.rs  pdf.rs
db/: SCHEMA_REFERENCE.sql
document/: CI_CD.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOY_QUICKSTART.md  DOCKER_SETUP.md  InsureTrack_API.postman_collection.json  R2_SETUP.md  README.md  RUNBOOK_VPS_DEV.md  TROUBLESHOOTING.md  USER_JOURNEYS.md  openapi.yaml
document/api/: InsureTrack_API.postman_collection.json  openapi.yaml
document/contributing/: CONTRIBUTING.md
document/deployment/: CI_CD.md  DEPLOYMENT.md  DEPLOY_QUICKSTART.md  R2_SETUP.md  RUNBOOK_VPS_DEV.md  SMOKE_COOKIE_AUTH.md
document/operations/: DOCKER_SETUP.md  TROUBLESHOOTING.md
document/product/: DESIGN.md  USER_JOURNEYS.md
e2e/: admin.spec.ts  auth-cookie.spec.ts  portal.spec.ts
frontend/: .dockerignore  .env.example  Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/portal/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: AdminListPage.tsx  AdminShell.tsx  AdminUserMenu.tsx  Carousel.tsx  Chart.tsx  Icon.tsx  Modal.tsx  Navbar.tsx  Pagination.tsx  PortalShell.tsx
frontend/src/components/ui/: alert-dialog.tsx  button.tsx  confirm.tsx  dialog.tsx
frontend/src/lib/: api.ts  forms.tsx
scripts/: backup-now.sh  deploy.sh  dev-reset.bat  generate-env.sh  healthcheck-all.sh  preflight.sh  reset-postgres-password.bat  restore-db.sh  setup-db-native.bat  stop.bat
(+90 files in other folders)
